# subgraphs

./: .clang-format  .clang-tidy  .gitignore  ALGORITHM_V3_README.md  CMakeLists.txt  DIRECTED_MULTIGRAPH_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_REFERENCE.py  README.md  debug_directed.py  main.cpp  readme.txt  test_murty.py
Docs/Report/: main.tex  refs.bib
Examples/: approx1.txt  approx2.txt  approx3.txt  approx4.txt  dokladny1.txt  dokladny2.txt  dokladny3.txt  matrix_gen.py  sample_graphs2.txt  sample_graphs3.txt  sample_graphs4.txt
data/: sample_graphs0.txt  sample_graphs1.txt  sample_graphs5.txt
dependencies/: .gitignore  CMakeLists.txt
scripts/: build_debug.sh  build_release.sh  run_all.sh  run_debug.sh  run_release.sh  run_tests.sh
src/: CMakeLists.txt  algorithm_v3.py  algorithm_v3_directed.py  example_neighbor_iteration.cpp  examples_v3.py  main.cpp  test_algorithm_v3.py
src/algorithms/: subgraph_algorithm.cpp
src/graph/: combination_iterator.cpp  multigraph.cpp  neighbor_iterator.cpp  neighbor_range.cpp  permutation_iterator.cpp  sequence_iterator.cpp
src/include/algorithms/: heuristic.h  heuristic.inl  subgraph_algorithm.h  subgraph_algorithm.inl
src/include/graph/: combination_iterator.h  combination_iterator.inl  edge.h  multigraph.h  multigraph.inl  neighbor_iterator.h  neighbor_range.h  permutation_iterator.h  permutation_iterator.inl  sequence_iterator.h  sequence_iterator.inl
src/include/utils/: graph_loader.h  graph_loader.inl  graph_printer.h  graph_printer.inl
src/utils/: graph_loader.cpp  graph_printer.cpp
tests/: CMakeLists.txt  README.md  test_graph_loader_gtest.cpp  test_iterators.cpp  test_iterators_gtest.cpp  test_multigraph.cpp  test_multigraph_gtest.cpp  test_sample_graphs_gtest.cpp  test_subgraph_algorithm_gtest.cpp
tests/performance_tests/: POTRZEBNE.md  README.md  graph_10_20_True_False.txt  matrix_gen.py  plot_results.py  run_all_tests.sh  run_performance_tests.py  setup_venv.sh  test_extension_quality.py  test_extension_quality_large.py  verify_setup.py
tests/performance_tests/results/: performance_results.csv
tests/performance_tests/test_graphs/: large_quality_test.txt
tests/performance_tests/test_graphs/approx_dense/: graph_p10_t30.txt  graph_p15_t45.txt  graph_p20_t60.txt  graph_p25_t75.txt  graph_p30_t90.txt  graph_p35_t105.txt  graph_p40_t120.txt  graph_p45_t135.txt  graph_p50_t150.txt  graph_p5_t15.txt
tests/performance_tests/test_graphs/approx_dense_sparse/: graph_p10_t30.txt  graph_p12_t36.txt  graph_p15_t45.txt  graph_p16_t48.txt  graph_p18_t54.txt  graph_p20_t60.txt  graph_p22_t66.txt  graph_p25_t75.txt  graph_p30_t90.txt  graph_p5_t15.txt  graph_p8_t24.txt
tests/performance_tests/test_graphs/approx_sparse/: graph_p10_t30.txt  graph_p15_t45.txt  graph_p20_t60.txt  graph_p25_t75.txt  graph_p30_t90.txt  graph_p35_t105.txt  graph_p40_t120.txt  graph_p45_t135.txt  graph_p50_t150.txt  graph_p5_t15.txt
tests/performance_tests/test_graphs/approx_sparse_dense/: graph_p10_t30.txt  graph_p12_t36.txt  graph_p15_t45.txt  graph_p16_t48.txt  graph_p18_t54.txt  graph_p20_t60.txt  graph_p22_t66.txt  graph_p25_t75.txt  graph_p30_t90.txt  graph_p5_t15.txt  graph_p8_t24.txt
tests/performance_tests/test_graphs/approx_subgraph_var/: graph_p10_t60.txt
tests/performance_tests/test_graphs/big_dense_small_sparse/: graph_p20_t40.txt  graph_p30_t60.txt  graph_p50_t100.txt
tests/performance_tests/test_graphs/dense_only/: graph_p10_t20.txt  graph_p15_t30.txt  graph_p20_t40.txt  graph_p30_t60.txt  graph_p5_t10.txt
tests/performance_tests/test_graphs/dense_small_exact/: graph_p10_t20.txt  graph_p12_t24.txt  graph_p15_t30.txt  graph_p5_t10.txt  graph_p8_t16.txt
tests/performance_tests/test_graphs/exact_dense/: graph_p10_t40.txt  graph_p1_t4.txt  graph_p2_t8.txt  graph_p3_t12.txt  graph_p4_t16.txt  graph_p5_t20.txt  graph_p6_t24.txt  graph_p8_t32.txt
tests/performance_tests/test_graphs/exact_dense_sparse/: graph_p10_t40.txt  graph_p1_t4.txt  graph_p2_t8.txt  graph_p3_t12.txt  graph_p4_t16.txt  graph_p5_t20.txt  graph_p6_t24.txt  graph_p8_t32.txt
tests/performance_tests/test_graphs/exact_sparse/: graph_p10_t40.txt  graph_p1_t4.txt  graph_p2_t8.txt  graph_p3_t12.txt  graph_p4_t16.txt  graph_p5_t20.txt  graph_p6_t24.txt  graph_p8_t32.txt
tests/performance_tests/test_graphs/exact_sparse_dense/: graph_p10_t40.txt  graph_p1_t4.txt  graph_p2_t8.txt  graph_p3_t12.txt  graph_p4_t16.txt  graph_p5_t20.txt  graph_p6_t24.txt  graph_p8_t32.txt
tests/performance_tests/test_graphs/exact_subgraph_var/: graph_p4_t8.txt
tests/performance_tests/test_graphs/small_dense_big_sparse/: graph_p10_t40.txt  graph_p15_t60.txt  graph_p20_t80.txt
tests/performance_tests/test_graphs/sparse_only/: graph_p100_t200.txt  graph_p10_t20.txt  graph_p150_t300.txt  graph_p200_t400.txt  graph_p20_t40.txt  graph_p30_t60.txt  graph_p50_t100.txt  graph_p75_t150.txt
tests/performance_tests/test_graphs/subgraph_variation/: graph_p10_t30.txt
