add_executable(test_multigraph_gtest test_multigraph_gtest.cpp)
target_link_libraries(test_multigraph_gtest PRIVATE subgraphs_lib GTest::gtest_main)
add_test(NAME MultigraphGTests COMMAND test_multigraph_gtest)
set_tests_properties(MultigraphGTests PROPERTIES TIMEOUT 15)

add_executable(test_iterators_gtest test_iterators_gtest.cpp)
target_link_libraries(test_iterators_gtest PRIVATE subgraphs_lib GTest::gtest_main)
add_test(NAME IteratorGTests COMMAND test_iterators_gtest)
set_tests_properties(IteratorGTests PROPERTIES TIMEOUT 15)

add_executable(test_subgraph_algorithm_gtest test_subgraph_algorithm_gtest.cpp)
target_link_libraries(test_subgraph_algorithm_gtest PRIVATE subgraphs_lib GTest::gtest_main)
add_test(NAME SubgraphAlgorithmGTests COMMAND test_subgraph_algorithm_gtest)
set_tests_properties(SubgraphAlgorithmGTests PROPERTIES TIMEOUT 15)

add_executable(test_graph_loader_gtest test_graph_loader_gtest.cpp)
target_link_libraries(test_graph_loader_gtest PRIVATE subgraphs_lib GTest::gtest_main)
add_test(NAME GraphLoaderGTests COMMAND test_graph_loader_gtest)
set_tests_properties(GraphLoaderGTests PROPERTIES TIMEOUT 15)

add_executable(test_sample_graphs_gtest test_sample_graphs_gtest.cpp)
target_link_libraries(test_sample_graphs_gtest PRIVATE subgraphs_lib GTest::gtest_main)
add_test(NAME SampleGraphGTests COMMAND test_sample_graphs_gtest)
set_tests_properties(SampleGraphGTests PROPERTIES TIMEOUT 15)
